--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test": "jest"
   },
   "dependencies": {
-    "moment": "^2.24.0",
+    "faker": "^4.1.0",
     "mysql2": "^2.1.0"
   },
   "devDependencies": {
@@ -25,6 +25,7 @@
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^1.7.0",
     "jest": "^25.1.0",
+    "moment": "^2.24.0",
     "mysql": "^2.18.1",
     "prettier": "^1.19.1",
     "sequelize": "^5.21.5"
