--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "faker": "^4.1.0",
+    "jquery": "^3.4.1",
     "mysql2": "^2.1.0",
     "nodemon": "^2.0.2",
     "react": "^16.13.0",
