--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dev": "webpack -d --watch"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "faker": "^4.1.0",
     "jquery": "^3.4.1",
     "mysql2": "^2.1.0",
