--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dev": "webpack -d --watch"
   },
   "dependencies": {
+    "@babel/runtime": "^7.8.7",
     "axios": "^0.19.2",
     "enzyme": "^3.11.0",
     "faker": "^4.1.0",
