--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "mysql2": "^2.1.0",
     "nodemon": "^2.0.2",
     "react": "^16.13.0",
-    "react-dom": "^16.13.0"
+    "react-dom": "^16.13.0",
+    "sinon": "^9.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.8.7",
