--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@babel/preset-react": "^7.8.3",
     "babel-jest": "^25.1.0",
     "babel-loader": "^8.0.6",
+    "css-loader": "^3.4.2",
     "enzyme-adapter-react-16": "^1.15.2",
     "eslint": "^6.1.0",
     "eslint-config-airbnb": "^18.0.1",
@@ -49,6 +50,7 @@
     "jest": "^25.1.0",
     "moment": "^2.24.0",
     "prettier": "^1.19.1",
+    "style-loader": "^1.1.3",
     "webpack": "^4.42.0",
     "webpack-cli": "^3.3.11"
   }
