--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "express": "^4.17.1",
     "jest": "^25.1.0",
     "moment": "^2.24.0",
+    "mysql": "^2.18.1",
     "prettier": "^1.19.1",
     "style-loader": "^1.1.3",
     "webpack": "^4.42.0",
