increase code coverage with dynamic imports, hook usage instead of states, as well as additional webpack plugins

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test": "jest",
     "db:setup": "node ./database/sqldb.js",
     "start": "nodemon ./server/index.js",
-    "react-dev": "webpack",
+    "react-dev": "webpack --env dev --w",
     "all": "node ./database/dbCreate.js && node ./database/sqldb.js && webpack && node ./server/index.js",
     "coverage": "jest --coverage"
   },
@@ -23,10 +23,11 @@
     "jquery": "^3.5.0",
     "mysql": "^2.18.1",
     "mysql2": "^2.1.0",
-    "sequelize": "^5.21.5",
     "nodemon": "^2.0.2",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "react-loadable": "^5.5.0",
+    "sequelize": "^5.21.5",
     "sinon": "^9.0.1"
   },
   "devDependencies": {
@@ -36,6 +37,7 @@
     "@babel/preset-react": "^7.8.3",
     "babel-jest": "^25.1.0",
     "babel-loader": "^8.0.6",
+    "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.4.2",
     "enzyme-adapter-react-16": "^1.15.2",
     "eslint": "^6.1.0",
@@ -47,7 +49,9 @@
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^1.7.0",
     "express": "^4.17.1",
+    "html-webpack-plugin": "^4.4.1",
     "jest": "^25.1.0",
+    "mini-css-extract-plugin": "^0.11.1",
     "moment": "^2.24.0",
     "prettier": "^1.19.1",
     "style-loader": "^1.1.3",
